@@ -239,83 +239,6 @@
 
 
 ##
-## BUILD DATABASE CONFIGURATION (WANNA-BUILD)
-##
-
-# 1.  File and directory locations
-
-# Database type.  Valid values are 'mldbm' and 'postgresql'
-#$db_type = 'mldbm';
-
-# directory for the databases, lock files and log files
-#$db_base_dir = '/var/lib/wanna-build';
-
-# base name of the database, "-DIST" is appended automatically, and ".lock"
-# for lock files
-#$db_base_name = 'build-db';
-
-# name of transaction log file (in base dir)
-#$db_transaction_log = 'transactions.log';
-
-# 2.  Distribution information
-
-# Valid distributions
-#%db_distributions = ('experimental' => { priority => 4 },
-#		     'unstable' => { priority => 3 },
-#		     'testing' => { priority => 2 },
-#		     'testing-security' => { noadw => 1,
-#					     hidden => 1,
-#					     priority => 2  },
-#		     'stable' => { priority => 1 },
-#		     'stable-security' => { noadw => 1,
-#					    hidden => 1,
-#					    priority => 1 },
-#		     'oldstable' => {  priority => 0 },
-#		     'oldstable-security' => { noadw => 1,
-#					       hidden => 1,
-#					       priority => 0 },
-
-# sections to import and maintain in the database
-#@db_sections = qw(main contrib non-free);
-
-# 3. Data sources
-
-# source for Packages files (for wanna-build--merge-packages)
-# can be an ftp or http URL, or a local path
-#$db_packages_source = "ftp://ftp.debian.org/debian";
-
-# source for quinn-diff output (for wanna-build--merge-quinn)
-# can be an ftp or http URL, or a local path
-#$db_quinn_source = "http://buildd.debian.org/quinn-diff/output";
-
-# 4. Users
-
-# Administrative users
-#@db_admin_users = qw(buildd);
-
-# 5. Mail and statistics generation
-
-# mail address of database maintainer (informed about a few things)
-#$db_maintainer_email = "buildd";
-
-# mail address of not-for-us maintainer (informed about Not-For-Us state
-# changes)
-#$db_notforus_maintainer_email = "buildd";
-
-# mail address for logs of all state changes
-#$db_log_mail = undef;
-
-# where to send wanna-build statistics mails
-#$db_stat_mail = undef;
-
-# mail domain under which the build dæmons can be reached
-#$db_mail_domain = undef;
-
-# file to publish statistics over WWW (optional)
-#$db_web_stats = undef;
-
-
-##
 ## PROGRAMS USED BY SBUILD
 ##
 
