@@ -8,69 +8,93 @@
 
 
 ##
-## DATABASES
+## BUILD DATABASE CONFIGURATION (WANNA-BUILD)
 ##
 
+##
+## DATABASE CONFIGURATION AND LOCATIONS
+##
+
+# Database type.  Valid values are 'mldbm' and 'postgresql'
+#$db_type = 'mldbm';
+
 # directory for the databases, lock files and log files
-#$basedir = "/var/lib/wanna-build";
+#$db_base_dir = '/var/lib/wanna-build';
 
 # base name of the database, "-DIST" is appended automatically, and ".lock"
 # for lock files
-#$dbbase = "build-db";
+#$db_base_name = 'build-db';
 
 # name of transaction log file (in base dir)
-#$transactlog = "transactions.log";
-
+#$db_transaction_log = 'transactions.log';
 
 ##
 ## DISTRIBUTIONS
 ##
 
-# valid distribution names
-#@distributions = qw(oldstable-security stable testing unstable stable-security testing-security);
-
-# ordering of distributions
-#%dist_order = ( 'oldstable-security' => 0, stable => 1, 'stable-security' => 1, testing => 2, 'testing-security' => 2, unstable => 3 );
+# Valid distributions
+#%db_distributions = ('experimental' => { priority => 4 },
+#		     'unstable' => { priority => 3 },
+#		     'testing' => { priority => 2 },
+#		     'testing-security' => { noadw => 1,
+#					     hidden => 1,
+#					     priority => 2  },
+#		     'stable' => { priority => 1 },
+#		     'stable-security' => { noadw => 1,
+#					    hidden => 1,
+#					    priority => 1 },
+#		     'oldstable' => {  priority => 0 },
+#		     'oldstable-security' => { noadw => 1,
+#					       hidden => 1,
+#					       priority => 0 });
 
 # sections to import and maintain in the database
-# the full list would be:
-# @sections = qw(main contrib non-free);
-@sections = qw(main contrib non-free);
-
+#@db_sections = qw(main contrib non-free);
 
 ##
-## SOURCES
+## DATA SOURCES
 ##
 
-# source for Packages files (for wanna-build-merge-packages)
+# source for Packages files (for wanna-build--merge-packages)
 # can be an ftp or http URL, or a local path
-#$pkgs_source = "ftp://ftp.debian.org/debian";
+#$db_packages_source = "ftp://ftp.debian.org/debian";
 
-# source for quinn-diff output (for wanna-build-merge-quinn)
+# source for quinn-diff output (for wanna-build--merge-quinn)
 # can be an ftp or http URL, or a local path
-#$quinn_source = "http://buildd.debian.org/quinn-diff/output";
-
+#$db_quinn_source = "http://buildd.debian.org/quinn-diff/output";
 
 ##
 ## USERS
 ##
 
-#@admin_users = qw(buildd);
-
+# Administrative users
+#@db_admin_users = qw(buildd);
 
 ##
-## MAIL
+## MAIL AND STATISTICS GENERATION
 ##
-
-# All mail address variables below can contain more than one address
-# if you separate them by spaces. All of them also can be empty, no
-# mails to that address will be sent in this case.
-
-# Program to send mail
-#$mailprog = "/usr/sbin/sendmail";
 
 # mail address of database maintainer (informed about a few things)
-$db_maint = "buildd";
+#$db_maintainer_email = "buildd";
+
+# mail address of not-for-us maintainer (informed about Not-For-Us state
+# changes)
+#$db_notforus_maintainer_email = "buildd";
+
+# mail address for logs of all state changes
+#$db_log_mail = undef;
+
+# where to send wanna-build statistics mails
+#$db_stat_mail = undef;
+
+# mail domain under which the build dæmons can be reached
+#$db_mail_domain = undef;
+
+# file to publish statistics over WWW (optional)
+#$db_web_stats = undef;
+
+# mail address of database maintainer (informed about a few things)
+#$db_maint = "buildd";
 
 # mail address of not-for-us maintainer (informed about Not-For-Us state
 # changes)
