@@ -450,70 +450,76 @@ sub read_config {
     my $HOME = $self->get('HOME');
 
     # Variables are undefined, so config will default to DEFAULT if unset.
-    our $mailprog = undef;
-    our $dpkg = undef;
-    our $sudo = undef;
-    our $su = undef;
-    our $schroot = undef;
-    our $schroot_options = undef;
-    our $fakeroot = undef;
-    our $apt_get = undef;
-    our $apt_cache = undef;
-    our $dpkg_source = undef;
-    our $dcmd = undef;
-    our $md5sum = undef;
-    our $avg_time_db = undef;
-    our $avg_space_db = undef;
-    our $stats_dir = undef;
-    our $package_checklist = undef;
-    our $build_env_cmnd = undef;
-    our $pgp_options = undef;
-    our $log_dir = undef;
-    our $mailto = undef;
-    our %mailto;
+    my $mailprog = undef;
+    my $dpkg = undef;
+    my $sudo = undef;
+    my $su = undef;
+    my $schroot = undef;
+    my $schroot_options = undef;
+    my $fakeroot = undef;
+    my $apt_get = undef;
+    my $apt_cache = undef;
+    my $dpkg_source = undef;
+    my $dcmd = undef;
+    my $md5sum = undef;
+    my $avg_time_db = undef;
+    my $avg_space_db = undef;
+    my $stats_dir = undef;
+    my $package_checklist = undef;
+    my $build_env_cmnd = undef;
+    my $pgp_options = undef;
+    my $log_dir = undef;
+    my $mailto = undef;
+    my %mailto;
     undef %mailto;
-    our $mailfrom = undef;
-    our $purge_build_directory = undef;
-    our @toolchain_regex;
+    my $mailfrom = undef;
+    my $purge_build_directory = undef;
+    my @toolchain_regex;
     undef @toolchain_regex;
-    our $stalled_pkg_timeout = undef;
-    our $srcdep_lock_dir = undef;
-    our $srcdep_lock_wait = undef;
-    our $max_lock_trys = undef;
-    our $lock_interval = undef;
-    our $apt_policy = undef;
-    our $check_watches = undef;
-    our @ignore_watches_no_build_deps;
+    my $stalled_pkg_timeout = undef;
+    my $srcdep_lock_dir = undef;
+    my $srcdep_lock_wait = undef;
+    my $max_lock_trys = undef;
+    my $lock_interval = undef;
+    my $apt_policy = undef;
+    my $check_watches = undef;
+    my @ignore_watches_no_build_deps;
     undef @ignore_watches_no_build_deps;
-    our %watches;
+    my %watches;
     undef %watches;
-    our $chroot_mode = undef;
-    our $chroot_split = undef;
-    our $sbuild_mode = undef;
-    our $debug = undef;
-    our $force_orig_source = undef;
-    our %individual_stalled_pkg_timeout;
+    my $chroot_mode = undef;
+    my $chroot_split = undef;
+    my $sbuild_mode = undef;
+    my $debug = undef;
+    my $force_orig_source = undef;
+    my %individual_stalled_pkg_timeout;
     undef %individual_stalled_pkg_timeout;
-    our $path = undef;
-    our $ld_library_path = undef;
-    our $maintainer_name = undef;
-    our $uploader_name = undef;
-    our $key_id = undef;
-    our $apt_update = undef;
-    our $apt_allow_unauthenticated = undef;
-    our %alternatives;
+    my $path = undef;
+    my $ld_library_path = undef;
+    my $maintainer_name = undef;
+    my $uploader_name = undef;
+    my $key_id = undef;
+    my $apt_update = undef;
+    my $apt_allow_unauthenticated = undef;
+    my %alternatives;
     undef %alternatives;
-    our $check_depends_algorithm = undef;
-    our $distribution = undef;
-    our $archive = undef;
-    our $chroot = undef;
-    our $build_arch_all = undef;
-    our $arch = undef;
-    our $job_file = undef;
+    my $check_depends_algorithm = undef;
+    my $distribution = undef;
+    my $archive = undef;
+    my $chroot = undef;
+    my $build_arch_all = undef;
+    my $arch = undef;
+    my $job_file = undef;
 
-    require $Sbuild::Sysconfig::paths{'SBUILD_CONF'}
-        if -r $Sbuild::Sysconfig::paths{'SBUILD_CONF'};
-    require "$HOME/.sbuildrc" if -r "$HOME/.sbuildrc";
+    foreach ($Sbuild::Sysconfig::paths{'SBUILD_CONF'}, "$HOME/.sbuildrc") {
+	if (-r $_) {
+	    my $e = eval `cat "$_"`;
+	    if (!defined($e)) {
+		print STDERR "E: $_: Errors found in configuration file:\n$@";
+		exit(1);
+	    }
+	}
+    }
 
     $self->set('ARCH', $arch);
     $self->set('DISTRIBUTION', $distribution);
